working on login page

--- a/src/main.css
+++ b/src/main.css
@@ -6,12 +6,11 @@ html, body {
     overflow-x: hidden;
 }
 
-/*hide password eye icon*/
 input[type="password"]::-ms-reveal{
     display: none;
 }
 input[type="date"]::-webkit-calendar-picker-indicator {
-    opacity: 0; /* Hide the default icon */
+    opacity: 0;
     position: absolute;
     right: 0;
     width: 100%;
