--- a/src/styles/AuthForm.css
+++ b/src/styles/AuthForm.css
@@ -229,7 +229,7 @@ input[type="checkbox"] {
     font-size: 18px;
     color: var(--mainColor);
 }
-/* Existing 3D flip for Login & Signup */
+/* Existing 3D flip for LoginPage & Signup */
 .card-3d-wrapper {
     width: 100%;
     height: 100%;
